Apply rule "Prefer java.util.Map.of()"