@@ -112,7 +112,7 @@ class ShikokuJapanRailwayKanjiRomajiOrHiraganaMapFactoryBeanTest {
 		//
 		Assertions.assertSame(hiragana, get(unicodeBlock, instance));
 		//
-		Assertions.assertThrows(IllegalArgumentException.class, () -> instance.setUnicodeBlock(Collections.emptyMap()));
+		Assertions.assertThrows(IllegalArgumentException.class, () -> instance.setUnicodeBlock(Map.of()));
 		//
 		Assertions.assertThrows(IllegalStateException.class, () -> instance.setUnicodeBlock("h"));
 		//
