@@ -11,6 +11,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 
@@ -77,8 +78,7 @@ class VoiceManagerImportSinglePanelTest {
 		//
 		Assertions.assertEquals(Narcissus.getField(instance, imageWriterSpiFormats), Collections.singletonList(string));
 		//
-		Assertions.assertThrows(IllegalArgumentException.class,
-				() -> instance.setImageWriterSpiFormats(Collections.emptyMap()));
+		Assertions.assertThrows(IllegalArgumentException.class, () -> instance.setImageWriterSpiFormats(Map.of()));
 		//
 	}
 
